style/style.less
/* ... */
/* END: BLOG */
//#############################################################################
/*      CONTACT */

.contact {
		box-sizing: content-box;
		width: 100%;
		height: 866px;
		position: relative;
		background: url("../image/contact_backgr.jpg")  no-repeat;
		background-size: cover;
		@media screen and (max-width: @bp-tablet) {
			height: auto;
			width: initial;
			padding-top: 60px;
			padding-bottom: 30px;
		}
	&_h1 {
		display:block;
		margin: 0 auto;
		color:  @color-font;
		font-weight: 700;
		text-align:center;
		line-height: 100px;
		@media screen and (max-width: @bp-tablet) {
			line-height: initial;
		}
	}
	&_wrapper {
		height:663px - 82px - 26px;
		position: absolute;
		top:82px;
		left:0;
		right:0;
		@media screen and (max-width: @bp-tablet) {
			height: auto;
			position: relative;
			top: 0;
			left: 0;
			right: 0;
		}
	}
	&_description{
		max-width: 360px;
		margin: 26px auto 26px auto;
		color:  @color-font;
		@media screen and (max-width: @bp-tablet) {
			margin: 12px auto;
		}
	}
	&_container {
		display: block;
		box-sizing: border-box;
		padding: 0;
	}
	&_form {
		width: 500/1170*100%;
		margin: 0;
		box-sizing: inherit;
		float: left;
		@media screen and (max-width: @bp-tablet) {
			float: none;
			width: 100%;
		}
	}
	&_input {
		display: block;
		width:100%;
		box-sizing: inherit; 
		margin-bottom: 15px;
		padding-left: 20px;
		font:@font-default;
		font-size: 15px;
		font-weight: 300;
		color: @color-font-inverted;
		line-height:50px;
		border: none;
		background: rgba(0,196,196,.5);
		height:50px;
		&:last-child {
			height:250px; 
			resize: none;
		}
		&:placeholder {
			color: @color-font-inverted;
		}
		&:hover {
			cursor: pointer;
			.hover-shadow();
		}
		&:focus {
			font-weight: 700;
			background: rgb(0, 196, 196);
			border-left: 4px solid #355b82;
		}
	}
	&_info {
		height: 160/648*100%;
		box-sizing: border-box;
		float: left;
		margin-left: 170/1170*100%;
		padding-left: 3px;
		font: @font-default;
		font-size: 20px;
		font-weight: 300;
		color:  @color-font;
		@media screen and (max-width: @bp-tablet) {
			float: none;
			margin-left: 0px;
			padding-left: 0px;
			height: auto;
			padding: 10px;
			color: @color-font-inverted;
			text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5)
		}
		// fix iOS safari style for telephone number detection
		& a[href^="tel"] {
			color: inherit !important;
			text-decoration: none !important;
			font-size: inherit !important;
			font-family: inherit !important;
			font-weight: inherit !important;
			line-height: inherit !important;
		}
	}
	&_h2infotype {
		display: block;
		font-size: 17px;
		font-weight: 700;
		text-transform: uppercase;
		line-height: 1;
		margin-top: 16px;
		margin-bottom: 0px;
	}
	&_h2infotype:first-child {
		margin-top: 0;
		margin-bottom: 0px;
	}
}

/* END: CONTACT */
//#############################################################################
/*      FOOTER */

.footer {
	background: #262626;
	color: @color-font-footer;
	margin: 0;
	padding: 0;
	font: @font-default;
	&_content {
		min-height: 90px;
		display: flex;
		justify-content: space-between;
		align-items: center;
		& p {
			margin: 0px;
			font-size: 14px;
		}
		@media screen and (max-width: @bp-tablet) {
			flex-direction: column;
		}
	}
	&_link {
		color: @color-font-footer;
	}
	&_link:hover {
		text-decoration: underline;
	}
	&_logo {
		width: 64px;
		fill: @color-font-footer;
		@media screen and (max-width: @bp-tablet) {
			height: 32px;
			order: -1;
			padding-top: 10px;
		}
		// IE-only CSS hack
		@media all and (-ms-high-contrast:none) {
			background-image: url(../image/logo-small.png); /* IE10 */
			// *::-ms-backdrop, .foo { color: red } /* IE11 */
			background-repeat: no-repeat;
			background-position: center;
			height: 40px;
		}
	}
}

/* END: FOOTER */

